sqlc init
